@@ -1,5 +1,6 @@
 <b>2010-06-15</b>
 
+* Bugfix: Facebook fatal error when adding app (3014614)
 * Bugfix: BHD (Belfast City Airport) won't display (3015921)
 
 <b>2010-05-04</b>
